--- a/css/search_bar.css
+++ b/css/search_bar.css
@@ -20,3 +20,12 @@ img{
     color: white;
     padding: 10px;
 }
+
+#searchCards {
+
+    padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
+
+  }
