--- a/css/search_bar.css
+++ b/css/search_bar.css
@@ -21,14 +21,14 @@ img{
     padding: 10px;
 }
 
-#searchCards {
+/*#searchCards {
 
     padding-top: 50px;
     padding-right: 30px;
     padding-bottom: 50px;
     padding-left: 80px;
 
-  }
+  } */
 
   .search {
         position: sticky; 
