--- a/css/search_bar.css
+++ b/css/search_bar.css
@@ -34,3 +34,23 @@ img{
         position: sticky; 
         top: 1;                 
   }
+
+  div.form
+{
+    display: block;
+    text-align: center;
+}
+form
+{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+
+body {
+    text-align: center;
+}
+form {
+    display: inline-block;
+}
